# aapp2face

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
aapp2face/: __init__.py
aapp2face/cli/: anulaciones.py  cesiones.py  facturas.py  helpers.py  main.py
aapp2face/cli/resources/sim-responses/: LEEME.md  cambiarCodigoRCF.202001020718.json  cambiarEstadoListadoFacturas.P00000010.202001020718.202001017112.9999.json  confirmarDescargaFactura.P00000010.202001020718.json  consultarEstados.json  (+18 more)
aapp2face/lib/: __init__.py  client.py  exceptions.py  fakesoap.py  main.py  objects.py  patch.py  soap.py
api/FACeClient/: index.html
api/FACeConnection/: index.html
api/FACeFakeSoapClient/: index.html
api/FACeSoapClient/: index.html
api/exceptions/: index.html
api/objects/: index.html
changelog/: index.html
cli/: index.html
cli/comandos/: index.html
cli/tutorial/cambiar-estado-facturas/: index.html
cli/tutorial/configuracion/: index.html
cli/tutorial/confirmar-facturas/: index.html
cli/tutorial/descargar-facturas/: index.html
cli/tutorial/intro/: index.html
cli/tutorial/nuevas-facturas/: index.html
commands/: index.html
docs/: README.md  changelog.md  cli.md  commands.md  glossary.md  lib.md
docs/api/: FACeClient.md  FACeConnection.md  FACeFakeSoapClient.md  FACeSoapClient.md  exceptions.md  objects.md
docs/cli/: comandos.md
docs/cli/tutorial/: cambiar-estado-facturas.md  configuracion.md  confirmar-facturas.md  descargar-facturas.md  intro.md  nuevas-facturas.md
docs/css/: termynal.css
docs/js/: termynal.js
docs/lib/: intro.md
docs/lib/api/: FACeClient.md  FACeConnection.md  FACeFakeSoapClient.md  FACeSoapClient.md  exceptions.md  objects.md
glossary/: index.html
lib/: index.html
lib/api/FACeClient/: index.html
lib/api/FACeConnection/: index.html
lib/api/FACeFakeSoapClient/: index.html
lib/api/FACeSoapClient/: index.html
lib/api/exceptions/: index.html
lib/api/objects/: index.html
lib/intro/: index.html
search/: search_index.json
tests/: constants.py  helpers.py  test_anulaciones.py  test_cli.py  test_cli_anulaciones.py  test_cli_cesiones.py  test_cli_estados.py  test_cli_facturas.py  test_cli_unidades.py  test_cli_version.py  test_facturas_externas.py
tests/responses/: gestionarSolicitudAnulacionFactura.P00000010.202001020718.json  notificaFactura.2018-800.json  notificaFacturaNoElectronica.2018-900.json
