[tool.poetry]
name = "aapp2face"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
zeep = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
rope = "^1.7.0"
black = "^23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
